New entries should be added at the top
=======

2004-06-25 finance.py: handle case when urlopen() fails - SC

2004-06-24 Support for multiple images on axes and figure, with
           blending.  Support for upper and lower image origins.
           clim, jet and gray functions in matlab interface operate on
           current image - JDH

2004-06-23 ported code to Perry's new colormap and norm scheme.  Added
           new rc attributes image.aspect, image.interpolation,
           image.cmap, image.lut, image.origin

2004-06-20 backend_gtk.py: replace gtk.TRUE/FALSE with True/False.
	   simplified _make_axis_menu(). - SC

2004-06-19 anim_tk.py: Updated to use TkAgg by default (not GTK)
           backend_gtk_py: Added '_' in front of private widget
           creation functions - SC

2004-06-17 backend_gtk.py: Create a GC once in realise(), not every
           time draw() is called. - SC

2004-06-16 Added new py2exe FAQ entry and added frozen support in
           get_data_path for py2exe - JDH

2004-06-16 Removed GTKGD, which was always just a proof-of-concept
           backend - JDH

2004-06-16 backend_gtk.py updates to replace deprecated functions
	   gtk.mainquit(), gtk.mainloop().
           Update NavigationToolbar to use the new GtkToolbar API - SC

2004-06-15 removed set_default_font from font_manager to unify font
           customization using the new function rc.  See API_CHANGES
           fpr more info -  JDH

2004-06-15 Improved (yet again!) axis scaling to properly handle
           singleton plots - JDH

2004-06-15 Restored the old FigureCanvasGTK.draw() - SC

2004-06-11 More memory leak fixes in transforms and ft2font - JDH

2004-06-11 Eliminated numerix .numerix file and environment variable
	   NUMERIX.  Fixed bug which prevented command line overrides:
	   --numarray or --numeric. - JTM

2004-06-10 Added rc configuration function rc; deferred all rc param
           setting until object creation time; added new rc attrs: